# animal_genetic

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  dev-requirements.txt  docker-compose.yml  pyproject.toml  requirements.txt
src/: manage.py
src/animal_genetic/: settings.py  urls.py  wsgi.py
src/api/: serializers.py  urls.py  views.py
src/genetic/: constants.py  models.py
src/genetic/migrations/: 0001_initial.py  0002_alter_genetictest_health_status.py
