[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "animal_genetic"
version = "0.0.1"
description = "RESTfull API for genetic scientists."
readme = "README.md"
requires-python = ">=3.12, <3.13"
dependencies = [
    "Django",
    "djangorestframework",
    "gunicorn",
    "psycopg2-binary",
    "python-dotenv",
]

[project.optional-dependencies]
dev = [
    "black",
    "django-stubs",
    "django-stubs-ext",
    "djangorestframework-stubs",
    "flake8",
    "flake8-annotations",
    "flake8-bugbear",
    "flake8-commas",
    "Flake8-pyproject",
    "isort",
    "mypy",
    "pep8-naming",
    "pre-commit",
    "pymarkdownlnt",
]

[tool.black]
line-length = 79
skip-string-normalization = "true"

[tool.django-stubs]
django_settings_module = "animal_genetic.settings"

[tool.flake8]
ignore = [
    "ANN101",  # Missing type annotation for self in method
    "ANN102", # Missing type annotation for cls in classmethod
    "W503", # Line break before binary operator
]
per-file-ignores = ["*/settings.py: E501"]
max-complexity = 10
max-line-length = 80
extend-exclude = [
    "venv/",
    "*/migrations",
]

[tool.isort]
profile = "black"
line_length = 79
src_paths = "src"

[tool.mypy]
python_version = "3.12"
plugins = ["mypy_django_plugin.main", "mypy_drf_plugin.main"]
check_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_errors = false
ignore_missing_imports = true
implicit_reexport = false
strict_optional = true
strict_equality = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_no_return = true
mypy_path = "src"

[tool.setuptools]
py-modules = []
